fix : remove blue active effect on click that happens on mobile

--- a/styles.css
+++ b/styles.css
@@ -91,4 +91,9 @@ body {
     width: 80vw;
     height: 30vh;
 }
+
+.button-container {
+    -webkit-tap-highlight-color: transparent; /* removes blue highlight on mobile */
+    outline: none; /* removes default outline */
+}
 }
